--- a/course-team.qmd
+++ b/course-team.qmd
@@ -14,10 +14,20 @@ title: "Teaching team"
 
 ## Teaching assistants
 
-|                                          | Name                                                          | Role                         | Lab section       | Office hours |
-|------------------------------------------|---------------------------------------------------------------|------------------------------|-------------------|--------------|
-| ![](images/team/holly.png){width="100"}  | [Holly Cui](https://www.linkedin.com/in/holly-cui-4b4520236/) | Lab TA                       | W 1:25PM - 2:40PM | TBA          |
-| ![](images/team/eli.png){width="100"}    | [Eli Gnesin](https://www.linkedin.com/in/elignesin/)          | Head + Lab TA                | W 3:05PM - 4:20PM | TBA          |
-| ![](images/team/kelsey.png){width="100"} | [Kelsey Brod](https://www.kelseybrod.com/)                    | Project lead + Lecture TA    |                   | TBA          |
-| ![](images/team/shelby.png){width="100"} | [Shelby Tisdale](https://www.linkedin.com/in/shelby-tisdale/) | Project support + Lecture TA |                   | TBA          |
-| ![](images/team/glenn.png){width="100"}  | [Glenn Palmer](https://scholars.duke.edu/person/glenn.palmer) |                              |                   | TBA          |
++------------------------------------------+---------------------------------------------------------------+------------------------------+-------------------+------------------------------------------------------------+
+|                                          | Name                                                          | Role                         | Lab section       | Office hours                                               |
++==========================================+===============================================================+==============================+===================+============================================================+
+| ![](images/team/holly.png){width="100"}  | [Holly Cui](https://www.linkedin.com/in/holly-cui-4b4520236/) | Lab TA                       | W 1:25PM - 2:40PM | Tuesdays and Thursdays 11:30-12:30 in Old Chem 203B        |
++------------------------------------------+---------------------------------------------------------------+------------------------------+-------------------+------------------------------------------------------------+
+| ![](images/team/eli.png){width="100"}    | [Eli Gnesin](https://www.linkedin.com/in/elignesin/)          | Head + Lab TA                | W 3:05PM - 4:20PM | Monday 10:30-11:30 in Old Chem 203B                        |
+|                                          |                                                               |                              |                   |                                                            |
+|                                          |                                                               |                              |                   | Tuesdays 8:15-9:45 in Old Chem 203B                        |
++------------------------------------------+---------------------------------------------------------------+------------------------------+-------------------+------------------------------------------------------------+
+| ![](images/team/kelsey.png){width="100"} | [Kelsey Brod](https://www.kelseybrod.com/)                    | Project lead + Lecture TA    |                   | Mondays 3-5 on [Zoom](https://duke.zoom.us/j/93140556044)  |
++------------------------------------------+---------------------------------------------------------------+------------------------------+-------------------+------------------------------------------------------------+
+| ![](images/team/shelby.png){width="100"} | [Shelby Tisdale](https://www.linkedin.com/in/shelby-tisdale/) | Project support + Lecture TA |                   | Sundays 7-8 on [Zoom](https://duke.zoom.us/j/91926689475)  |
+|                                          |                                                               |                              |                   |                                                            |
+|                                          |                                                               |                              |                   | Mondays 9-10 in Old Chem 025                               |
++------------------------------------------+---------------------------------------------------------------+------------------------------+-------------------+------------------------------------------------------------+
+| ![](images/team/glenn.png){width="100"}  | [Glenn Palmer](https://scholars.duke.edu/person/glenn.palmer) |                              |                   | Fridays 2-3 pm in Old Chem 203B                            |
++------------------------------------------+---------------------------------------------------------------+------------------------------+-------------------+------------------------------------------------------------+
