--- a/hw/meet-the-toolkit.qmd
+++ b/hw/meet-the-toolkit.qmd
@@ -2,8 +2,6 @@
 title: "Meet the toolkit"
 ---
 
-# Meet the toolkit
-
 The goals of this exercise are:
 
 - Help you configure GitHub authentication
@@ -14,7 +12,7 @@ If you haven't yet done so, reserve a container for STA 313 by on the *Reservati
 You only need to do this once, and when you do, you’ll see this container moved to the *My reservations* menu on the left.
 Next, click on STA313 under *My reservations* to access the RStudio instance you’ll use for the course.
 
-## 1. GitHub authentication
+# GitHub authentication
 
 Begin by creating a public private key pair using the `credentials` package, run the following line in the RStudio Console:
 
@@ -68,7 +66,7 @@ You can now test that the SSH authentication is working by attempting to clone a
 
 <img src="images/github_ssh3.png" width="100%" />
 
-### Frequently Asked Questions
+## Frequently Asked Questions
 
 1.  **What happens if I already have an SSH key?**
 
@@ -125,7 +123,7 @@ You can now test that the SSH authentication is working by attempting to clone a
     The process is quick and GitHub supports the addition of multiple
     public keys.
 
-## 2. Profiles in course tools
+# Profiles in course tools
 
 - Update your GitHub profile to show your real name and (ideally, but optionally) a recent photo of yours. 
 If you prefer not to use your photo, that's fine, but please use some personalized avatar that's not the one GitHub randomly assigns to you.
